--- a/videos.html
+++ b/videos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" x-data="{ open: false }">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,9 +41,9 @@
     }
   </style>
 </head>
-<body class="fade-in text-gray-100 min-h-screen flex flex-col" x-data="{ open: false }">
+<body class="fade-in text-gray-100 min-h-screen flex flex-col">
 
-  <!-- Header -->
+  <!-- Header completo -->
   <header class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
@@ -66,8 +66,8 @@
       </nav>
     </div>
 
-    <!-- Menú Móvil -->
-    <div x-show="open" class="sm:hidden px-4 pb-4 space-y-2 text-center text-gray-200">
+    <!-- Menú Móvil desplegable -->
+    <div x-show="open" x-transition class="sm:hidden px-4 pb-4 space-y-2 text-center text-gray-200">
       <a href="index.html" class="block hover:text-green-300">Inicio</a>
       <a href="nosotros.html" class="block hover:text-green-300">Nosotros</a>
       <a href="productos.html" class="block hover:text-green-300">Productos</a>
@@ -76,7 +76,6 @@
       <a href="contacto.html" class="block hover:text-green-300">Contacto</a>
     </div>
   </header>
-
   <!-- Título -->
   <section class="text-center px-4 py-10">
     <h2 class="text-4xl font-semibold text-green-300 mb-4">Detrás del Puro</h2>
