--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- Menú desplegable móvil -->
     <div x-show="open" class="sm:hidden px-4 pb-4 space-y-2 text-center text-gray-200 transition-all duration-300">
-      <a href="index.html" class="block hover:text-green-300">Inicio</a>
+      <a href="index.html" class="text-green-300 font-semibold">Inicio</a>
       <a href="nosotros.html" class="block hover:text-green-300">Nosotros</a>
       <a href="productos.html" class="block hover:text-green-300">Productos</a>
       <a href="galeria.html" class="block hover:text-green-300">Galería</a>
