--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="es" x-data="{ open: false }" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8" />
@@ -14,7 +14,6 @@
     html {
       scroll-behavior: smooth;
     }
-
     body {
       background-image: url('images/hero-vegas.jpg');
       background-size: cover;
@@ -22,20 +21,25 @@
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-color: black;
+      position: relative;
     }
-
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: -1;
+    }
     .titulo {
       font-family: 'Playfair Display', serif;
     }
-
     .parrafo {
       font-family: 'Lora', serif;
     }
-
     .fade-in {
       animation: fadeIn 0.8s ease-in;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -94,26 +98,20 @@
   <footer class="mt-auto text-center bg-black bg-opacity-50">
     <div class="py-6 flex justify-center gap-4 flex-wrap">
       <!-- Facebook -->
-      <a class="bg-black/40 hover:bg-blue-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300 shadow-md">
-        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M22.675 0H1.325C.593 0 0 .593 0 1.326v21.348C0 23.407.593 24 1.325 24H12.82V14.709h-3.39v-3.622h3.39V8.413c0-3.36 2.051-5.191 5.045-5.191 1.433 0 2.664.107 3.021.155v3.505h-2.073c-1.625 0-1.938.772-1.938 1.902v2.496h3.877l-.506 3.622h-3.371V24h6.615C23.407 24 24 23.407 24 22.674V1.326C24 .593 23.407 0 22.675 0z"/>
-        </svg>
+      <a class="bg-white/10 hover:bg-blue-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300 shadow-md">
+        <i class="fab fa-facebook-f text-xl"></i>
         Facebook
       </a>
 
       <!-- Instagram -->
-      <a class="bg-black/40 hover:bg-pink-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300 shadow-md">
-        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 448 512">
-          <path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66ZM398.8,80A48,48,0,0,1,432,113.2c11,26.55,16,64.42,16,142.8s-5,116.25-16,142.8A48,48,0,0,1,398.8,432c-26.55,11-64.42,16-142.8,16s-116.25-5-142.8-16A48,48,0,0,1,48,398.8c-11-26.55-16-64.42-16-142.8S37,139.75,48,113.2A48,48,0,0,1,81.2,80C107.75,69,145.62,64,224,64S340.25,69,366.8,80ZM224,338a82,82,0,1,1,82-82A82.09,82.09,0,0,1,224,338ZM352,160a24,24,0,1,1-24-24A24,24,0,0,1,352,160Z"/>
-        </svg>
+      <a class="bg-white/10 hover:bg-pink-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300 shadow-md">
+        <i class="fab fa-instagram text-xl"></i>
         Instagram
       </a>
 
       <!-- WhatsApp -->
-      <a class="bg-black/40 hover:bg-green-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300 shadow-md">
-        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 448 512">
-          <path d="M380.9 97.1C339-3.1 224.5-25.4 136.7 24.3S-1.4 218.9 39.2 311.6L2.3 437.4c-4.5 15.2 9.4 28.6 24.5 24.1l125.8-36.8c92.8 40.6 200.6-2.5 241.3-94.7 40.6-92.8-2.6-200.6-94.7-241.3zM224 366.7c-79 0-143.4-64.4-143.4-143.4S145 80 224 80s143.4 64.4 143.4 143.4S303 366.7 224 366.7zm76.3-108.3-23.7-6.7c-3.2-.9-6.7.1-9 2.4l-10.6 10.8c-29.5-15.6-48.2-33.5-63.8-63.8l10.8-10.6c2.3-2.3 3.3-5.8 2.4-9l-6.7-23.7c-1.3-4.7-5.7-7.9-10.5-7.9h-21.4c-6.2 0-11.4 5.2-10.8 11.4 6.5 71.9 61.3 126.7 133.2 133.2 6.2.6 11.4-4.6 11.4-10.8v-21.4c0-4.9-3.2-9.3-7.9-10.5z"/>
-        </svg>
+      <a class="bg-white/10 hover:bg-green-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300 shadow-md">
+        <i class="fab fa-whatsapp text-xl"></i>
         WhatsApp
       </a>
     </div>
@@ -121,6 +119,9 @@
     <!-- Derechos -->
     <p class="text-xs text-gray-300 pb-4">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
+
+  <!-- Font Awesome para iconos -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
