--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es" x-data="{ open: false }" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8" />
@@ -22,6 +22,9 @@
       background-repeat: no-repeat;
       background-color: black;
       position: relative;
+      opacity: 0;
+      transform: translateY(40px) scale(0.98);
+      animation: fadeInSmooth 1.2s ease-out forwards;
     }
     body::before {
       content: '';
@@ -37,16 +40,19 @@
     .parrafo {
       font-family: 'Lora', serif;
     }
-    .fade-in {
-      animation: fadeIn 0.8s ease-in;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    @keyframes fadeInSmooth {
+      0% {
+        opacity: 0;
+        transform: translateY(40px) scale(0.98);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+      }
     }
   </style>
 </head>
-<body class="fade-in text-gray-100 min-h-screen flex flex-col">
+<body class="text-gray-100 min-h-screen flex flex-col">
 
   <!-- Header con menú plegable -->
   <header class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 shadow-md">
@@ -125,4 +131,3 @@
 
 </body>
 </html>
-
